[tool.poetry]
name = "optuna-book"
version = "0.1.0"
description = ""
authors = ["ekusiadadus <ekusiadadus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
optuna = "^3.1.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
plotly = "^5.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
